* Updated CSS for facebook like and send button box that was cropped * Add "Turn off open graph meta values" option to avoid conflict with your other plugin * Updated facebook like widget - added data-href parameter in facebook like link
git-svn-id: https://plugins.svn.wordpress.org/woocommerce-facebook-share-like-button/trunk@756769 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/fbshare.css
+++ b/css/fbshare.css
@@ -1,22 +1,23 @@
 .facebook-button-container {
 	overflow: visible;
-	width: 100%;
-	height: 25px;
+   	width: 27%;
+	height: 25px; 
+	clear:both;
 }
 
 .facebook-button {
-    width: 100%;
+    width: 300px;
     height: 25px;
 }
 
-.fb-like { z-index: 9999; }
+.fb-like { z-index: 99999; }
 
-.fbpdl { 
-	z-index: 9999 !important;
-	overflow: visible;
+.fbpdl {
+    z-index: 99999 !important; width:300px;
+    overflow: visible;
 }
 
-.fb-like span { 
-	z-index: 9999 !important;
-	overflow: visible;
-} 
+.fb-like span {
+    z-index: 99999 !important; width:500px !important;
+    overflow: visible;
+}
